@@ -7,17 +7,22 @@ if (isset($_SESSION["username"])) {
     $username = $_SESSION["username"];
 }
 ?>
-
-
 <html>
 
 <head>
-    <h1>Conferenze disponibili</h1>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
 
 <body>
+    <!-- START Navigation Bar -->
+    <?php
+    $currentPage = __FILE__;
+    include "./utilities/navigationBar.php";
+    ?>
+    <!-- END Navigation Bar -->
+
+    <h1>Conferenze disponibili</h1>
     <?php
     $sql = "CALL VisualizzaConferenze(1)";
     $st = $pdo->query($sql);
