@@ -1,0 +1,7 @@
+.dropdown-menu {
+  right: 0;
+  left: unset;
+}
+.fa-fw {
+  margin-right: 10px;
+}
